--- a/Variables.ipynb
+++ b/Variables.ipynb
@@ -33,8 +33,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-21T08:38:53.251269Z",
-     "start_time": "2021-10-21T08:38:52.892173Z"
+     "end_time": "2021-10-21T09:40:25.465158Z",
+     "start_time": "2021-10-21T09:40:25.454222Z"
     }
    },
    "outputs": [],
@@ -54,8 +54,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-21T08:40:05.180407Z",
-     "start_time": "2021-10-21T08:40:05.159037Z"
+     "end_time": "2021-10-21T09:40:25.480188Z",
+     "start_time": "2021-10-21T09:40:25.467159Z"
     }
    },
    "outputs": [
@@ -69,6 +69,375 @@
    ],
    "source": [
     "print(teepy)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Strings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### in python both can be used"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-21T09:40:25.495157Z",
+     "start_time": "2021-10-21T09:40:25.482158Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "word = \"teePy\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-21T09:40:25.511158Z",
+     "start_time": "2021-10-21T09:40:25.497158Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "teePy\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-21T09:40:25.527200Z",
+     "start_time": "2021-10-21T09:40:25.513158Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "word2 = 'teePy'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-21T09:40:25.543261Z",
+     "start_time": "2021-10-21T09:40:25.529159Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "teePy\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(word2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-21T09:40:25.558505Z",
+     "start_time": "2021-10-21T09:40:25.544787Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "teePy\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = \"teePy\"\n",
+    "print(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-21T09:40:25.573635Z",
+     "start_time": "2021-10-21T09:40:25.561530Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Teepy\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(word.title())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Upper"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-21T09:40:25.588302Z",
+     "start_time": "2021-10-21T09:40:25.575672Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "teePy\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = \"teePy\"\n",
+    "print(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-21T09:40:25.604302Z",
+     "start_time": "2021-10-21T09:40:25.591349Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TEEPY\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(word.upper())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Lower"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-21T09:40:25.619433Z",
+     "start_time": "2021-10-21T09:40:25.606303Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "teePy\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = \"teePy\"\n",
+    "print(word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-21T09:40:25.635458Z",
+     "start_time": "2021-10-21T09:40:25.621430Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "teepy\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(word.lower())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Combining Strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-21T09:40:25.650664Z",
+     "start_time": "2021-10-21T09:40:25.637464Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "first_name = 'py'  #first name\n",
+    "last_name = 'teedlar'  #last name \n",
+    "full_name = first_name +' '+last_name   #first name--space--last name "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### printing words + variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-21T09:40:25.665843Z",
+     "start_time": "2021-10-21T09:40:25.653603Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to py teedlar !\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Welcome to ' + full_name +' !')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### using title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-21T09:40:25.681905Z",
+     "start_time": "2021-10-21T09:40:25.667848Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to Py Teedlar !\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Welcome to ' + full_name.title() +' !')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### or"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-21T09:40:25.697264Z",
+     "start_time": "2021-10-21T09:40:25.683846Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "first_name = 'py'  #first name\n",
+    "last_name = 'teedlar'  #last name \n",
+    "full_name = first_name +' '+last_name   #first name--space--last name \n",
+    "show = 'Welcome to ' + full_name.title() +' !'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-21T09:40:25.712868Z",
+     "start_time": "2021-10-21T09:40:25.698404Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to Py Teedlar !\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(show)"
    ]
   }
  ],
