--- a/Basics/Variables.ipynb
+++ b/Basics/Variables.ipynb
@@ -439,6 +439,144 @@
    "source": [
     "print(show)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adding WhiteSpaces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-25T12:16:05.362827Z",
+     "start_time": "2021-10-25T12:16:05.339508Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "teePy\n",
+      "\tteePy\n",
+      "\n",
+      "teePy\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('teePy')\n",
+    "print('\\tteePy')\n",
+    "print('\\nteePy')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-25T12:24:59.280520Z",
+     "start_time": "2021-10-25T12:24:59.263860Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "teePy\n",
+      "\tBasics\n",
+      "\t\tHello World.ipynb\n",
+      "\t\tVariables.ipynb\n",
+      "\n",
+      "\tContent.ipynb\n",
+      "\tREADME.md\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('teePy\\n\\tBasics\\n\\t\\tHello World.ipynb\\n\\t\\tVariables.ipynb\\n\\n\\tContent.ipynb\\n\\tREADME.md')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Stripping WhiteSpaces"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-25T12:27:43.941142Z",
+     "start_time": "2021-10-25T12:27:43.925092Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pyteedlar\n"
+     ]
+    }
+   ],
+   "source": [
+    "instaid = 'pyteedlar    '\n",
+    "print(instaid.rstrip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-25T12:28:19.562580Z",
+     "start_time": "2021-10-25T12:28:19.539046Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pyteedlar\n"
+     ]
+    }
+   ],
+   "source": [
+    "instaid = '    pyteedlar'\n",
+    "print(instaid.lstrip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-25T12:29:50.464244Z",
+     "start_time": "2021-10-25T12:29:50.440187Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pyteedlar\n"
+     ]
+    }
+   ],
+   "source": [
+    "instaid = '    pyteedlar    '\n",
+    "print(instaid.strip())"
+   ]
   }
  ],
  "metadata": {
